# sdp_2023

./: .gitignore  CMakeLists.txt  README.md  configure.bat  configure.sh  references.txt  regex2.cpp  regex2.era  regex3.cpp  regex3.era  test_file.txt  test_file_2.txt  test_file_regex.txt  test_null.txt  test_regex_functional.txt  test_regex_infamb.txt  test_regex_union.txt
BST/: bst.cpp  bst.h
DPDA/: cfg.cpp  cfg.h  cfg_test.cpp  dpda.cpp  dpda.h  dpda_test.cpp  earley.hpp  earley_test.cpp  hashes.h  language.cpp  parser.h  token.cpp  token.h  utils.cpp  utils.h
Regex/: FST.hpp  FST_test.cpp  OutputFSA.hpp  SSFT.hpp  TFSA.hpp  ambiguity.cpp  ambiguity.hpp  functionality.hpp  regex.cpp  regexParser.cpp  regexParser.hpp  wordset.hpp
include/: FST.hpp  OutputFSA.hpp  SSFT.hpp  TFSA.hpp  ambiguity.hpp  cfg.h  concepts.hpp  datastructures.hpp  debug.hpp  dpda.h  earley.hpp  formatting.hpp  formlang.hpp  functionality.hpp  grammar_factory.hpp  hashing.hpp  letter.hpp  lex_traverser.hpp  parser.h  pipes.hpp  regexParser.hpp  state.hpp  token.h  utils.h  wordset.hpp
lang/: grammar_factory.hpp  langdef.cpp  lex_traverser.hpp
src/: debug.cpp  letter.cpp  regexParser.cpp  token.cpp  utils.cpp
test2/: 9MI0800266_g2.cpp
tests/: FST_test.cpp  cfg_test.cpp  dpda_test.cpp  earley_test.cpp  langdef.cpp  language.cpp  regex.cpp
util/: bench.hpp  pipes.hpp  utils.cpp  utils.hpp
